[project]
name = "dsp-search-seed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitarray>=3.8.0",
    "colorlog>=6.10.1",
    "markdown>=3.10",
    "pydantic>=2.12.3",
    "pyside6==6.9.3",
    "pyside6-fluent-widgets>=1.9.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
